# golutra-cli

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: CLI.md
scripts/: golutra-cli.cmd  publish_via_gh_api.sh
src/: lib.rs
src/agent_runtime/: health.rs  interface.rs  lifecycle.rs  mod.rs
src/agent_runtime/adapters/: claude.rs  codex.rs  gemini.rs  mod.rs  opencode.rs  pty_common.rs  qwen.rs  shell.rs
src/cli/: commands.rs  events.rs  mod.rs  renderer.rs  repl.rs
src/contracts/: agent.rs  mod.rs
src/memory/: context.rs  index.rs  mod.rs  shared.rs  store.rs
src/openclaw/: agent_factory.rs  channel.rs  executor.rs  history.rs  mod.rs  planner.rs  protocol.rs  scheduler.rs
src/openclaw/agent_templates/: audit.rs  custom.rs  devops.rs  mod.rs  refactor.rs  researcher.rs  reviewer.rs  tester.rs  writer.rs
